fix wrapping issue

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,7 +8,6 @@
 .container{
     display: flex;
     justify-content: center;
-    // align-items: center;
     text-align: center;
     min-height: 100vh;
     flex-direction: column;
@@ -19,7 +18,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 16px; // Adds space between cards
+        flex-wrap: wrap;
+        gap: 16px; 
         border: 1px dashed red;
         min-height: 80vh;
         margin: 1em 2em 0em 2em;
